# inventory-desktop-app

./: CMakeLists.txt  README.md
include/: db.hpp  gui.hpp
src/: db.cpp  gui.cpp  main.cpp
